# AI_Check_AWS

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  RFQ_EMAIL_FLOW.md  bedrock_availability_report.json  bedrock_availability_report_singapore.json  docker-compose.yml  email_tracking.md  main.py  pyproject.toml  registration_guide.md  run.bat
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_products_and_users.py
bedrock_availability_poc/: .dockerignore  .env.example  Dockerfile  README.md  anthropic_client.py  app.py  bedrock_availability_report.json  bedrock_client.py  config.py  main.py  model_matcher.py  requirements.txt
docker/: entrypoint.sh
email_poc/: .gitignore
setup_docs/: chinese_mail_providers.md  personal_email_sending.txt
setup_docs/aurora_send_cloud/: AuroraSendCloud_Documentation.md  email_oauth_and_china_provider_strategy.md  engagelab_new_thread_issue.md
setup_docs/engagelab_guide/: email_send_guice.md  engagelab_new_thread_issue.md  engagelab_setup.md
setup_docs/sendgrid_guide/: questions_answer.md  sendgrid_dynamic_domain_auth.md  sendgrid_dynamic_email.txt  sendgrid_newthread_mail.md
sql/: schema.sql
src/: __init__.py  app.py  config.py  logger.py  route.py
src/auth/: __init__.py  dependencies.py  dev_bypass.py  routes.py  security.py  (+1 more)
templates/: _assign_email_alt_form.html  auth_base.html  base.html  conversation_detail.html  index.html  landing.html  login.html  quick_send.html  register_step1.html  register_step2.html  register_step3.html  tracking.html
(+22 files in other folders)
