[project]
name = "email-poc"
version = "0.1.0"
description = "RFQ email management with dynamic addressing and tracking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sendgrid>=6.11.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "requests>=2.34.2",
    "elasticemail>=4.1.4",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.4's bcrypt backend detection reads bcrypt.__about__, removed in bcrypt>=4.1
    "bcrypt>=3.2,<4.1",
    "email-validator>=2.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
